# rise-star-backend

./: .gitignore  Cargo.toml  test.rest
resources/: System.sql  env.toml.temp
src/: lib.rs  main.rs
src/config/: db.rs  env.rs  mod.rs
src/entity/: admin.rs  categories.rs  mod.rs
src/web/: login_admin_handler.rs  login_user_handler.rs  mod.rs  questions_handler.rs  router.rs
