[package]
name = "rise-star"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
sea-orm = { version = "0.12.15", features = ["macros", "sqlx-mysql", "runtime-tokio-native-tls"] }
sea-orm-macros = "0.12.15"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
